--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.datasource.username=sa
 spring.datasource.password=sa
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
